# deep_hedge_mccfr

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: CMakeLists.txt  dmc_example.cpp  dmc_experiment.cpp  inspect_game.cpp  run_experiment.cpp
configs/: goofspiel_2p_4cards_basic.json  goofspiel_2p_4cards_entropy.json  goofspiel_2p_4cards_no_entropy.json  kuhn_2p_basic.json  kuhn_3p_basic.json  leduc_2p_entropy.json  leduc_2p_no_entropy.json
experiments/goofspiel/2020-07-05_21-59-50/: config.json  stats.json
experiments/goofspiel/2020-07-11_21-11-42/: config.json  stats.json
experiments/goofspiel/2020-07-11_21-11-42/checkpoints/: baseline_net_0.pt  baseline_net_1.pt  baseline_opt_0.pt  baseline_opt_1.pt  player_net_0.pt  player_net_1.pt  player_opt_0.pt  player_opt_1.pt
experiments/goofspiel_4cards_entropy/2020-07-13_23-13-20/: config.json  stats.json
experiments/goofspiel_4cards_entropy/2020-07-13_23-13-20/checkpoints/: baseline_net_0.pt  baseline_net_1.pt  baseline_opt_0.pt  baseline_opt_1.pt  player_net_0.pt  player_net_1.pt  player_opt_0.pt  player_opt_1.pt
experiments/goofspiel_4cards_no_entropy/2020-07-13_23-13-32/: stats.json
experiments/goofspiel_4cards_no_entropy/2020-07-13_23-13-32/checkpoints/: baseline_net_0.pt  baseline_net_1.pt  baseline_opt_0.pt  baseline_opt_1.pt  player_net_0.pt  player_net_1.pt  player_opt_0.pt  player_opt_1.pt
experiments/goofspiel_4cards_no_entropy/2020-07-18_21-13-53/: config.json  stats.json
experiments/goofspiel_4cards_no_entropy/2020-07-18_21-13-53/checkpoints/: baseline_net_0.pt  baseline_net_1.pt  baseline_opt_0.pt  baseline_opt_1.pt  player_net_0.pt  player_net_1.pt  player_opt_0.pt  player_opt_1.pt
experiments/goofspiel_4cards_no_entropy/2020-09-05_22-02-04/: stats.json
experiments/goofspiel_4cards_no_entropy/2020-09-05_22-02-04/checkpoints/: baseline_net_0.pt  baseline_net_1.pt  baseline_opt_0.pt  baseline_opt_1.pt  player_net_0.pt  player_net_1.pt  player_opt_0.pt  player_opt_1.pt  state.archive
experiments/goofspiel_4cards_no_entropy/2020-09-07_15-02-29/: config.json
experiments/goofspiel_basic/2020-07-07_22-22-03/: config.json  stats.json
experiments/goofspiel_basic/2020-07-07_22-22-03/checkpoints/: baseline_net_0.pt  baseline_net_1.pt  baseline_opt_0.pt  baseline_opt_1.pt  player_net_0.pt  player_net_1.pt  player_opt_0.pt  player_opt_1.pt
experiments/kuhn_2p_entropy/2020-07-14_19-30-20/: config.json  stats.json
experiments/kuhn_2p_entropy/2020-07-14_19-30-20/checkpoints/: baseline_net_0.pt  baseline_net_1.pt  baseline_opt_0.pt  baseline_opt_1.pt  player_net_0.pt  player_net_1.pt  player_opt_0.pt  player_opt_1.pt
experiments/kuhn_3p/2020-07-05_22-14-31/: config.json  stats.json
experiments/kuhn_3p/2020-07-07_22-14-36/: stats.json
experiments/kuhn_3p/2020-07-07_22-14-36/checkpoints/: baseline_net_0.pt  baseline_net_1.pt  baseline_net_2.pt  baseline_opt_0.pt  baseline_opt_1.pt  baseline_opt_2.pt  player_net_0.pt  player_net_1.pt  player_net_2.pt  player_opt_0.pt  player_opt_1.pt  player_opt_2.pt
experiments/kuhn_3p_entropy/2020-07-14_19-30-50/: config.json  stats.json
experiments/kuhn_3p_entropy/2020-07-14_19-30-50/checkpoints/: baseline_net_0.pt  baseline_net_1.pt  baseline_net_2.pt  baseline_opt_0.pt  baseline_opt_1.pt  baseline_opt_2.pt  player_net_0.pt  player_net_1.pt  player_net_2.pt  player_opt_0.pt  player_opt_1.pt  player_opt_2.pt
experiments/kuhn_3p_entropy/2020-09-14_13-23-50/: config.json  stats.json
experiments/kuhn_3p_entropy/2020-09-14_13-23-50/checkpoints/: baseline_net_0.pt  baseline_net_1.pt  baseline_net_2.pt  baseline_opt_0.pt  baseline_opt_1.pt  baseline_opt_2.pt  player_net_0.pt  player_net_1.pt  player_net_2.pt  player_opt_0.pt  player_opt_1.pt  player_opt_2.pt  state.archive
experiments/kuhn_poker/2020-07-05_21-55-56/: config.json  stats.json
experiments/ledc_2p_high_traversals/2020-07-12_14-48-47/: stats.json
experiments/ledc_2p_high_traversals/2020-07-12_14-48-47/checkpoints/: baseline_net_0.pt  baseline_net_1.pt  baseline_opt_1.pt  player_net_0.pt  player_opt_1.pt
experiments/leduc_2p_entropy/2020-07-13_23-12-29/: config.json  stats.json
experiments/leduc_2p_entropy/2020-07-13_23-12-29/checkpoints/: baseline_net_0.pt  baseline_net_1.pt  baseline_opt_0.pt  baseline_opt_1.pt  player_net_0.pt  player_net_1.pt  player_opt_0.pt  player_opt_1.pt
experiments/leduc_2p_entropy/2020-09-07_23-17-29/: config.json  stats.json
experiments/leduc_2p_entropy/2020-09-07_23-17-29/checkpoints/: baseline_net_0.pt  baseline_net_1.pt  baseline_opt_0.pt  baseline_opt_1.pt  player_net_0.pt  player_net_1.pt  player_opt_0.pt  player_opt_1.pt  state.archive
experiments/leduc_2p_high_traversals/2020-07-12_14-48-47/: config.json
experiments/leduc_2p_high_traversals/2020-07-12_14-48-47/checkpoints/: baseline_opt_0.pt  player_net_1.pt  player_opt_0.pt
experiments/leduc_2p_no_entropy/2020-07-13_23-12-46/: stats.json
experiments/leduc_2p_no_entropy/2020-07-13_23-12-46/checkpoints/: baseline_net_0.pt  baseline_net_1.pt  baseline_opt_0.pt  baseline_opt_1.pt  player_net_0.pt  player_net_1.pt  player_opt_0.pt  player_opt_1.pt
experiments/leduc_2p_no_entropy/2020-07-18_21-13-51/: config.json  stats.json
experiments/leduc_2p_no_entropy/2020-07-18_21-13-51/checkpoints/: baseline_net_0.pt  baseline_net_1.pt  baseline_opt_0.pt  baseline_opt_1.pt  player_net_0.pt  (+3 more)
experiments/leduc_2p_no_entropy/2020-09-05_14-49-32/: config.json  stats.json
experiments/leduc_2p_no_entropy/2020-09-07_14-57-56/: stats.json
experiments/leduc_poker/2020-07-05_21-56-10/: config.json  stats.json
include/: deep_mw_cfr.h
include/dhc/: datasets.hpp  deep_hedge_mccfr.hpp  features.hpp  format.hpp  game.hpp  nets.hpp  policy.hpp  utils.hpp
include/dmc/: baseline.hpp  datasets.hpp  deep_mw_cfr.hpp  features.hpp  format.hpp  game.hpp  nets.hpp  player.hpp  policy.hpp  utils.hpp
notebooks/.ipynb_checkpoints/: Experiments visualization-checkpoint.ipynb
scripts/: initialize_open_spiel.sh
src/: CMakeLists.txt  deep_hedge_mccfr.cpp  deep_mw_cfr.cpp  empty.cpp  game.cpp  utils.cpp
(+18 files in other folders)
